# MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOVER_FOR_API_PERSON.md  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
config/: apis.yaml
data/: MCP Server for Istedlal AI Agents.docx
docs/: DAILY_SUMMARY_2025-03-10.md  DEPLOY_MEETING_CHECKLIST.md  ENV_SETUP.md  MCP_INSPECTOR_AND_N8N_CHECKLIST.md  MCP_INSPECTOR_GUIDE.md  POSTGRES_LOCAL_SETUP.md  PRODUCTION_HANDOVER.md  PROGRESS_REPORT_2025-03-08.md  PROJECT_STRUCTURE.md  VECTOR_PROVIDERS.md  WORKFLOW_DIAGRAM.md
scripts/: check_real_connectivity.py  port-forward-db.ps1  run.ps1  run_all_tests.py  test_tools.py
src/: __init__.py  main.py
src/auth/: __init__.py  static_bearer.py
src/config/: __init__.py  config.py
src/db/: __init__.py  document_store.py
src/embedding/: __init__.py  ollama_client.py
src/external_api/: __init__.py  client.py  loader.py  register.py
src/providers/: __init__.py
src/providers/vector/: __init__.py  base.py  chromadb_provider.py  mock_provider.py  pgvector_provider.py
src/tools/: __init__.py  get_file_metadata.py  search_files.py  semantic_search_files.py
tests/: __init__.py  test_tools_integration.py
